[package]
publish = false
name = "v_htmlescape-bench"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Criterion benchmark suite for v_htmlescape."
edition = "2024"
license = "MIT/Apache-2.0"
repository = "https://github.com/botika/v_escape"

[workspace]
members = ["."]

[lib]
bench = false

[[bench]]
name = "v_htmlescape"
harness = false
path = "src/all.rs"

[dependencies]
cfg-if = "1.0"
criterion = "0.5"
v_htmlescape = { version = "*", path = "../v_htmlescape", features = ["bytes-buf"] }
v_jsonescape = { version = "*", path = "../v_jsonescape", features = ["bytes-buf"] }
v_latexescape = { version = "*", path = "../v_latexescape", features = ["bytes-buf"] }
