[package]
publish = false
name = "benches"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Criterion benchmark suite for v_escape."
edition = "2024"
license = "MIT/Apache-2.0"
repository = "https://github.com/zzau13/v_escape"

workspace = ".."

[lib]
bench = false

[[bench]]
name = "v_htmlescape"
harness = false
path = "src/bench_v_htmlescape.rs"

[[bench]]
name = "v_jsonescape"
harness = false
path = "src/bench_v_jsonescape.rs"

[[bench]]
name = "v_latexescape"
harness = false
path = "src/bench_v_latexescape.rs"

[dependencies]
cfg-if = "1.0"
criterion = "0.8"
v_htmlescape = { version = "*", path = "../v_htmlescape" }
v_jsonescape = { version = "*", path = "../v_jsonescape" }
v_latexescape = { version = "*", path = "../v_latexescape" }
