[package]
name = "v_escape_codegen"
version = "0.1.9"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Code generator package for v_escape"
edition = "2024"
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/v_escape"
workspace = ".."

[dependencies]
syn = "2"
proc-macro2 = "^1.0.81"
quote = "1"
clap = { version = "4", default-features = false, features = ["derive", "std"] }
toml = "0"
serde = { version = "1", features = ["derive"] }
prettyplease = "0"
heck = "0"
anyhow = "1"

codegen-base = { version = "*", path = "../codegen-base" }
