[package]
name = "v_escape-codegen"
version = "0.1.8"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Code generator package for v_escape"
edition = "2024"
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/zzau13/v_escape"
workspace = ".."

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
clap = { version = "4", default-features = false, features = ["derive", "std"] }
toml = "0"
serde = { version = "1", features = ["derive"] }
prettyplease = "0"
heck = "0"
anyhow = "1"

v_escape-codegen-base = { workspace = true }
