[package]
name = "v_escape"
version = "0.18.0"
edition = "2024"

[features]
default = ["alloc", "fmt", "string", "std", "bytes"]
std = ["v_escape-base/std", "alloc"]
alloc = ["v_escape-base/alloc"]
bytes = ["v_escape-base/bytes"]
fmt = ["v_escape-base/fmt"]
string = ["v_escape-base/string"]

[dependencies]
v_escape-base = { workspace = true }
v_escape-proc-macro = { workspace = true }

[package.metadata.docs.rs]
all-features = true
