[package]
name = "v_escape"
version = "0.19.0"
edition = "2024"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "The simd optimized escaping code with macro"
documentation = "https://docs.rs/v_escape"
keywords = ["escaping", "simd", "macro"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/zzau13/v_escape"

[features]
default = ["alloc", "fmt", "string", "std", "bytes"]
std = ["v_escape-base/std", "alloc"]
alloc = ["v_escape-base/alloc"]
bytes = ["v_escape-base/bytes"]
fmt = ["v_escape-base/fmt"]
string = ["v_escape-base/string"]

[dependencies]
v_escape-base = { workspace = true }
v_escape-proc-macro = { workspace = true }

[package.metadata.docs.rs]
all-features = true
