[package]
name = "v_htmlescape"
version = "0.11.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "The simd optimized HTML escaping code"
documentation = "https://docs.rs/v_htmlescape"
edition = "2018"
keywords = ["html", "escaping", "simd"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/botika/v_escape"
workspace = ".."

[badges]
travis-ci = { repository = "botika/v_escape", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = ["bytes-buf-tokio2"]
bytes-buf-tokio2 = ["v_escape/bytes-buf-tokio2"]
bytes-buf-tokio3 = ["v_escape/bytes-buf-tokio3"]

[dependencies]
v_escape = { version = "~0.14.1", path = "../v_escape", default-features = false }
cfg-if = "1.0"
