[badges.maintenance]
status = 'actively-developed'
[dependencies.buf-min]
optional = true
version = '0.7'

[features]
bytes-buf = ['buf-min']

[package]
authors = ['Juan Aguilar Santillana <mhpoin@gmail.com>']
description = 'The simd optimized HTML escaping code'
documentation = 'https://docs.rs/v_htmlescape'
edition = '2021'
keywords = [
    'html',
    'escaping',
    'simd',
]
license = 'MIT/Apache-2.0'
name = 'v_htmlescape'
readme = 'README.md'
repository = 'https://github.com/botika/v_escape'
version = '0.15.8'
workspace = '..'
[package.metadata.docs.rs]
all-features = true
