[badges.maintenance]
status = "actively-developed"

[dependencies.v_escape-base]
workspace = true

[features]
alloc = ["v_escape-base/alloc"]
bytes = ["v_escape-base/bytes"]
default = ["std", "string", "fmt", "bytes"]
fmt = ["v_escape-base/fmt"]
std = ["v_escape-base/std", "alloc"]
string = ["v_escape-base/string"]

[package]
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "The simd optimized HTML escaping code"
documentation = "https://docs.rs/v_htmlescape"
edition = "2024"
keywords = ["html", "escaping", "simd"]
license = "MIT/Apache-2.0"
name = "v_htmlescape"
readme = "README.md"
repository = "https://github.com/zzau13/v_escape"
version = "0.15.8"
workspace = ".."

[package.metadata.docs.rs]
all-features = true
