[package]
name = "v_latexescape"
version = "0.13.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "The simd optimized LaTeX escaping code"
documentation = "https://docs.rs/v_latexescape"
edition = "2018"
keywords = ["latex", "escaping", "simd"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/botika/v_escape"
workspace = ".."

[badges]
travis-ci = { repository = "botika/v_escape", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
v_escape = { version = "0.18", path = "../v_escape" }
cfg-if = "1.0"
