[badges.maintenance]
status = 'actively-developed'
[dependencies.buf-min]
optional = true
version = '^0.6.1'

[features]
bytes-buf = ['buf-min']

[package]
authors = ['Juan Aguilar Santillana <mhpoin@gmail.com>']
description = 'The simd optimized LaTeX escaping code'
documentation = 'https://docs.rs/v_latexescape'
edition = '2021'
keywords = [
    'latex',
    'escaping',
    'simd',
]
license = 'MIT/Apache-2.0'
name = 'v_latexescape'
readme = 'README.md'
repository = 'https://github.com/botika/v_escape'
version = '0.14.1'
workspace = '..'
