[badges.maintenance]
status = "actively-developed"

[dependencies.buf-min]
optional = true
version = "0.7"

[dependencies.v_escape-base]
workspace = true

[features]
alloc = []
fmt = ["v_escape-base/fmt"]
std = [
    "alloc",
    "string",
    "fmt",
]
string = ["v_escape-base/string"]

[package]
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "The simd optimized LaTeX escaping code"
documentation = "https://docs.rs/v_latexescape"
edition = "2024"
keywords = [
    "latex",
    "escaping",
    "simd",
]
license = "MIT/Apache-2.0"
name = "v_latexescape"
readme = "README.md"
repository = "https://github.com/botika/v_escape"
version = "0.14.9"
workspace = ".."

[package.metadata.docs.rs]
all-features = true
