[package]
name = "v_shellescape"
version = "0.3.4"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Shell escaping code"
documentation = "https://docs.rs/v_shellescape"
edition = "2018"
keywords = ["shell", "escaping"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/botika/v_escape"
workspace = ".."

[badges]
travis-ci = { repository = "botika/v_escape", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
name = "v_shellescape"
path = "src/lib.rs"
bench = false

[dependencies]
v_escape = { version = "0.7", path = "../v_escape" }
